--- a/main.css
+++ b/main.css
@@ -400,16 +400,15 @@ small {
     font-size: 38px;
     line-height: 42px
 }
-.text-size--28,
 .text-size--34 {
+    font-size: 34px;
     line-height: 38px;
     font-family: Roboto
 }
-.text-size--34 {
-    font-size: 34px
-}
 .text-size--28 {
-    font-size: 28px
+    font-size: 28px;
+    line-height: 32px;
+    font-family: Roboto
 }
 .attachments__icon,
 .text-size--24 {
@@ -601,7 +600,7 @@ small {
     }
     .tabletl-text-size--28 {
         font-size: 28px;
-        line-height: 38px;
+        line-height: 32px;
         font-family: Roboto
     }
     .tabletl-text-size--24 {
@@ -713,7 +712,7 @@ small {
     }
     .tabletp-text-size--28 {
         font-size: 28px;
-        line-height: 38px;
+        line-height: 32px;
         font-family: Roboto
     }
     .tabletp-text-size--24 {
@@ -880,7 +879,7 @@ small {
     }
     .mobile-text-size--28 {
         font-size: 28px;
-        line-height: 38px;
+        line-height: 32px;
         font-family: Roboto
     }
     .mobile-text-size--24 {
@@ -26430,7 +26429,7 @@ print {
     -webkit-transition: opacity .5s;
     transition: opacity .5s
 }
-.content-block:hover .item-image {
+.content-block:hover .image-holder {
     opacity: .4
 }
 .content-block .list li {
@@ -26459,11 +26458,18 @@ print {
         order: -1
     }
 }
+.content-block .bundle-image-area {
+    position: absolute;
+    bottom: 35px;
+    right: 25px
+}
 .content-block .image-holder {
     display: inline-block;
     width: 160px;
     position: relative;
-    background: url(shadow.png) 50% 100% no-repeat
+    background: url(shadow.png) 50% 100% no-repeat;
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s
 }
 .content-block .image-holder img {
     margin-bottom: 30px;
@@ -26481,7 +26487,9 @@ print {
 .content-block .sticker {
     position: absolute;
     top: 39px;
-    left: -46px
+    left: -46px;
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s
 }
 @media only screen and (max-width: 767px) {
     .content-block .image-area {
@@ -26516,9 +26524,12 @@ print {
     top: 0
 }
 .content-block .text-legal {
-    max-height: 30px;
     color: #b8b8b8;
-    overflow: hidden
+    overflow: hidden;
+    position: absolute;
+    bottom: 25px;
+    left: 0;
+    right: 0
 }
 .content-block .banner-legal {
     position: absolute;
@@ -26548,7 +26559,7 @@ print {
 }
 .content-block--small {
     text-align: center;
-    padding: 30px 20px 25px
+    padding: 30px 20px 40px
 }
 .content-block--small .image-area {
     height: 235px
@@ -26574,6 +26585,9 @@ print {
 .content-block--small .description {
     min-height: 88px
 }
+.content-block--small .sticker-holder {
+    background: #fff
+}
 .content-block--small .sticker {
     left: -67px
 }
@@ -26588,15 +26602,25 @@ print {
         padding: 30px 20px 25px
     }
 }
+.content-block--medium .text-legal {
+    bottom: 0
+}
 .content-block--large {
     padding: 35px 24px 25px 40px
 }
-.content-block--large .image-area {
-    padding-left: 37px
+.content-block--large .bundle-image-area {
+    position: absolute;
+    bottom: 35px;
+    right: 25px;
+    text-align: right
+}
+.content-block--large .bunlde-content {
+    z-index: 2
 }
 .content-block--large .image-holder {
     width: auto;
-    height: 100%
+    height: 100%;
+    background: 0 0
 }
 .content-block--large .image-holder img {
     width: auto;
@@ -26604,12 +26628,21 @@ print {
 }
 @media only screen and (max-width: 1219px) {
     .content-block--large {
-        padding: 30px 20px 25px
+        padding: 20px 20px 25px
     }
     .content-block--large .image-area {
         margin-bottom: 33px;
         padding-left: 0
     }
+    .content-block--large .bundle-image-area {
+        position: static;
+        height: 261px;
+        margin-bottom: 10px;
+        text-align: center
+    }
+}
+.content-block--large .text-legal {
+    bottom: 0
 }
 .content-block__banner {
     min-height: 430px;
@@ -26623,6 +26656,9 @@ print {
     }
 }
 @media only screen and (max-width: 767px) {
+    .content-block--large .bundle-image-area {
+        height: 205px
+    }
     .content-block__banner {
         min-height: 400px
     }
@@ -26654,6 +26690,22 @@ print {
     .content-block__banner--large {
         min-height: 450px
     }
+}
+.content-block__banner--large:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #000;
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
+    opacity: 0;
+    z-index: 1
+}
+.content-block__banner--large:hover:before {
+    opacity: .3
 }
 .content-block__video-banner {
     overflow: hidden
@@ -26691,8 +26743,15 @@ print {
         display: none
     }
 }
+.content-block__video-banner .banner-content {
+    z-index: 1
+}
 .grid-row--gutter-small>.content-block--wide {
     padding: 5px
+}
+.hero-banner {
+    background: -webkit-linear-gradient(top, #cde8f7 0, #fff 100%);
+    background: linear-gradient(to bottom, #cde8f7 0, #fff 100%)
 }
 @media only screen and (max-width: 767px) {
     .content-block__banner--large {
@@ -26716,17 +26775,17 @@ print {
         height: 100%
     }
 }
-.hero-banner {
-    padding: 20px 0;
-    background: -webkit-linear-gradient(top, #cde8f7 0, #fff 100%);
-    background: linear-gradient(to bottom, #cde8f7 0, #fff 100%)
-}
 .hero-banner .description {
     min-height: 334px
 }
+@media only screen and (max-width: 1219px) {
+    .hero-banner .description {
+        min-height: 290px
+    }
+}
 @media only screen and (max-width: 1023px) {
     .hero-banner .description {
-        min-height: 150px
+        min-height: 130px
     }
 }
 .separator {
