--- a/main.css
+++ b/main.css
@@ -26614,7 +26614,7 @@ print {
     right: 25px;
     text-align: right
 }
-.content-block--large .bunlde-content {
+.content-block--large .bundle-content {
     z-index: 2
 }
 .content-block--large .image-holder {
