--- a/main.css
+++ b/main.css
@@ -6584,29 +6584,25 @@ examples:
     .carousel:hover .carousel__next:hover {
       opacity: 1; }
   /* line 80, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
-  .carousel--init .carousel__item {
-    height: 100%;
-    visibility: visible; }
-  /* line 87, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
   .carousel--loop .carousel__holder {
-    height: 402px; }
-  /* line 91, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
+    min-height: 402px; }
+  /* line 84, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
   .carousel--loop .carousel__item {
     position: absolute;
     z-index: 2;
     float: none;
     width: 100%;
     visibility: hidden; }
-    /* line 98, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
+    /* line 91, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
     .carousel--loop .carousel__item--clone {
       z-index: 1; }
-    /* line 102, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
+    /* line 95, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
     .carousel--loop .carousel__item:first-child {
       visibility: visible; }
-    /* line 106, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
-    .carousel--loop .carousel__item:nth-child(even) img {
-      -webkit-transform: rotate(180deg);
-              transform: rotate(180deg); }
+  /* line 102, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/carousel/_scss/_index.scss */
+  .carousel--init .carousel__item {
+    height: 100%;
+    visibility: visible; }
 
 /* line 1, /Users/goodpesik/Projects/onescreen/OneScreen/Client/Core/Framework/chart/_scss/_chart.scss */
 .doughnut {
